@@ -1,3 +1,10 @@
+1998-06-07  Stephan Kulow  <coolo@kde.org>
+
+	* kfiledialog.cpp: new experimental button order
+
+	* kfiledialog.cpp: added lastDirectory to remember the last visited
+	directory for next open
+
 1998-05-24  Stephan Kulow  <coolo@kde.org>
 
 	* kfiledialog.cpp: use setSelection also for the initial filename
